@@ -1177,6 +1177,7 @@ static zhandle_t *zookeeper_init_internal(const char *host, watcher_fn watcher,
     zh->active_node_watchers=create_zk_hashtable();
     zh->active_exist_watchers=create_zk_hashtable();
     zh->active_child_watchers=create_zk_hashtable();
+    zh->disable_reconnection_attempt = 0;
 
     if (adaptor_init(zh) == -1) {
         goto abort;
@@ -2194,8 +2195,10 @@ int zookeeper_interest(zhandle_t *zh, socket_t *fd, int *interest,
          *
          * We always clear the delay setting. If we fail again, we'll set delay
          * again and on the next iteration we'll do the same.
+         *
+         * We will also delay if the disable_reconnection_attempt is set.
          */
-        if (zh->delay == 1) {
+        if (zh->delay == 1 || zh->disable_reconnection_attempt == 1) {
             *tv = get_timeval(zh->recv_timeout/60);
             zh->delay = 0;
 
